--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "html2canvas": "^1.4.1",
-    "jszip": "^3.10.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "html2canvas": "1.4.1",
+    "jszip": "3.10.1",
     "@google/genai": "latest",
-    "jspdf": "^2.5.1",
-    "@supabase/supabase-js": "2.39.3"
+    "jspdf": "2.5.1",
+    "@supabase/supabase-js": "2.39.3",
+    "react-router-dom": "6.22.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
